Fix dark mode for tulip & rose

--- a/src/css/games/tulipandrose/darkStyle.less
+++ b/src/css/games/tulipandrose/darkStyle.less
@@ -1,4 +1,24 @@
-@import "../common";
+#info_container {
+	background-color: var(--dark-10);
+	color: var(--light-80);
+}
 
-#info_container { background-color: var(--dark-10); color: var(--light-80); }
-.tnr_highlight { border: 5px solid var(--red-10); }
+.tnr_highlight {
+	border: 5px solid var(--red-10);
+}
+
+#help-dialog-content [style*="background-color: #d9ead3"] {
+	background-color: var(--green-10) !important;
+}
+
+#help-dialog-content th[style^="background-color: #d9c8b1"] {
+	background-color: var(--dark-10) !important;
+}
+
+#help-dialog-content tr[style^="background-color: #fff"] {
+	background-color: var(--dark-30) !important;
+}
+
+#help-dialog-content tr[style^="background-color: #f4f4f4"] {
+	background-color: var(--dark-40) !important;
+}
